--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -1,23 +1,14 @@
 <html>
 
 <h1>
-  Siga
+  Teaching Assistant
 </h1>
 
-<table>
-  <tr>
-     <td><label>CPF</label></td>
-     <td><input [(ngModel)]="user.cpf" ></td>
-  </tr>
-  <tr>
-     <td><label>Senha </label></td>
-     <td><input [(ngModel)]="user.senha" ></td>
-  </tr>
-  <tr><td><button>Fazer Login</button></td>
-  </tr>
-  </tr>
-  <tr><td><button>Cadastrar</button></td>
-  </tr>
+<nav>
+    <a routerLink="/alunos">Alunos</a>
+    <a routerLink="/metas">Metas</a>
+</nav>
 
+<router-outlet></router-outlet>
 
 </html>
