--- a/gui/src/app/alunos.component.css
+++ b/gui/src/app/alunos.component.css
@@ -1,30 +1,32 @@
-.alunos {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
- 
-.alunos li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: cyan;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
+.login{
+  margin-left:auto; 
+  margin-right:auto;
+  background-color: aquamarine;
+  padding: 10px;
+  margin-top: 10%;
 }
 
-button {
-  font-family: Arial;
-  background-color: green;
+button:hover {
+  background-color: #cfd8dc;
+}
+
+
+.btcad{
+  font-family: 'Courier New', Courier, monospace;
+  background-color: rgb(44, 108, 247);
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
   cursor: hand;
 }
-button:hover {
-  background-color: #cfd8dc;
+
+.btlogin{
+  font-family: Arial;
+  background-color: rgb(241, 129, 38);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
 }
