--- a/gui/src/app/prof.component.html
+++ b/gui/src/app/prof.component.html
@@ -1,18 +1,23 @@
-<table>
+<html (mousemove)="onMove()">
+
+<table class="login">
 <tr>
-   <th>Nome</th>
-   <th>CPF</th>
-   <th>e-mail</th>
-   <th>login Github</th>
-   <th>Requisitos</th>
-   <th>Gerência de Configuração</th>
+   <td><label>CPF </label></td>
+   <td><input [(ngModel)]="prof.cpf" ></td>
+   <td *ngIf="cpfduplicado">
+     Já existe um prof com esse CPF
+   </td>
 </tr>
-<tr *ngFor="let a of alunos">
-   <td>{{a.nome}}</td>
-   <td>{{a.cpf}}</td>
-   <td>{{a.email}}</td>
-   <td>{{a.github_login}}</td>
-   <td class="meta"><input [(ngModel)]="a.metas['requisitos']" (change)="atualizarAluno(a)"></td>
-   <td class="meta"><input [(ngModel)]="a.metas['gerDeConfiguracao']" (change)="atualizarAluno(a)"></td>
+<tr>
+   <td><label>Senha </label></td>
+   <td><input [(ngModel)]="prof.senha" ></td>
+</tr>
+<tr>
+   <td><button class="btlogin" (click)="logarProf(prof)">Fazer Login</button></td>
+</tr>
+<tr>
+   <td><button class="btcad" (click)="criarProf(prof)">Cadastrar</button></td>
 </tr>
 </table>
+
+</html>
