--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -1,12 +1,14 @@
 <html>
 
-<h1>
-  Teaching Assistant
+<h1 class="siga">
+  Siga
 </h1>
 
+<h2 class="texto">Faça login como:</h2>
+
 <nav>
-    <a routerLink="/alunos">Alunos</a>
-    <a routerLink="/metas">Metas</a>
+    <a class="pag-alunos" routerLink="/alunos">Aluno</a>
+    <a class="pag-profs" routerLink="/professores">Professor</a>
 </nav>
 
 <router-outlet></router-outlet>
