--- a/gui/src/app/alunos.component.css
+++ b/gui/src/app/alunos.component.css
@@ -1,10 +1,16 @@
 .login{
   margin-left:auto; 
   margin-right:auto;
-  background-color: aquamarine;
+  background-color: rgb(243, 242, 179);
   padding: 10px;
-  margin-top: 10%;
+  margin-top: 8%;
 }
+
+.msg{
+  text-align: center;
+  margin-top: 5%;
+}
+
 
 button:hover {
   background-color: #cfd8dc;
