--- a/gui/src/app/prof.component.css
+++ b/gui/src/app/prof.component.css
@@ -1,11 +1,14 @@
 .login{
   margin-left:auto; 
   margin-right:auto;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: aquamarine;
+  background-color: rgb(141, 231, 243);
   padding: 10px;
-  margin-top: 10%;
+  margin-top: 8%;
+}
+
+.msg{
+  text-align: center;
+  margin-top: 5%;
 }
 
 button:hover {
