--- a/gui/src/app/prof.component.html
+++ b/gui/src/app/prof.component.html
@@ -1,5 +1,7 @@
 <html (mousemove)="onMove()">
 
+<h3 class="msg">Bem vindo, professor!</h3>
+
 <table class="login">
 <tr>
    <td><label>CPF </label></td>
