inserindo caminho para tela de cadastro

--- a/gui/src/app/alunos.component.css
+++ b/gui/src/app/alunos.component.css
@@ -18,6 +18,7 @@ button:hover {
 
 
 .btcad{
+  margin-left: 46%;
   font-family: 'Courier New', Courier, monospace;
   background-color: rgb(44, 108, 247);
   border: none;
