--- a/gui/src/app/alunos.component.html
+++ b/gui/src/app/alunos.component.html
@@ -17,9 +17,14 @@
 <tr>
    <td><button class="btlogin" (click)="logarAluno(aluno)">Fazer Login</button></td>
 </tr>
-<tr>
-   <td><button class="btcad" (click)="criarAluno(aluno)">Cadastrar</button></td>
-</tr>
 </table>
+
+<nav>
+   <a routerLink="/cadastro">
+      <button class="btcad">Cadastrar</button>
+   </a>
+</nav>
+
+<router-outlet></router-outlet>
 
 </html>
