adicionando caminho para tela de cadastro

--- a/gui/src/app/prof.component.css
+++ b/gui/src/app/prof.component.css
@@ -20,7 +20,7 @@ tr:hover {
 }
 
 .btcad{
-  align-self: center;
+  margin-left: 46%;
   font-family: 'Courier New', Courier, monospace;
   background-color: rgb(44, 108, 247);
   border: none;
