--- a/ta-gui/src/app/prof/prof.component.html
+++ b/ta-gui/src/app/prof/prof.component.html
@@ -6,13 +6,10 @@
 <tr>
    <td><label>CPF </label></td>
    <td><input [(ngModel)]="prof.cpf" ></td>
-   <td *ngIf="cpfduplicado">
-     Já existe um prof com esse CPF
-   </td>
 </tr>
 <tr>
    <td><label>Senha </label></td>
-   <td><input [(ngModel)]="prof.senha" ></td>
+   <td><input type="password" [(ngModel)]="prof.senha" ></td>
 </tr>
 <tr>
    <td><button class="btlogin" (click)="logarProf(prof)">Fazer Login</button></td>
