--- a/ta-gui/src/app/alunos/alunos.component.html
+++ b/ta-gui/src/app/alunos/alunos.component.html
@@ -1,18 +1,18 @@
-<html (mousemove)="onMove()">
+<html>
 
 <h3 class="msg">Bem vindo, aluno!</h3>
 
 <table class="login">
 <tr>
    <td><label>CPF </label></td>
-   <td><input [(ngModel)]="cpf" ></td>
+   <td><input [(ngModel)]="aluno.cpf" ></td>
 </tr>
 <tr>
    <td><label>Senha </label></td>
-   <td><input type="password" [(ngModel)]="senha" ></td>
+   <td><input type="password" [(ngModel)]="aluno.senha" ></td>
 </tr>
 <tr>
-   <td><button class="btlogin" (click)="logarAluno(cpf, senha)">Fazer Login</button></td>
+   <td><button class="btlogin" (click)="logarAluno(aluno)">Fazer Login</button></td>
 </tr>
 </table>
 
