campo data como data no cadastro

--- a/ta-gui/src/app/cadastro/cadastro.component.html
+++ b/ta-gui/src/app/cadastro/cadastro.component.html
@@ -21,7 +21,7 @@
 </tr>
 <tr>
    <td><label>Data de nascimento</label></td>
-   <td><input [(ngModel)]="pessoa.dt_nasc" ></td>
+   <td><input type="date" [(ngModel)]="pessoa.dt_nasc" ></td>
 </tr>
 <tr>
    <td><label>Email</label></td>
