--- a/ta-gui/src/app/alunos/alunos.component.html
+++ b/ta-gui/src/app/alunos/alunos.component.html
@@ -23,10 +23,12 @@
           [ngModelOptions]="{standalone: true}" required />
          <label>Senha </label>
       </div>
-      <button class="btn waves-effect waves-light" (click)="logarAluno(aluno)" type="submit">Fazer Login </button>
-      <a routerLink="/cadastro">
-         <button class="btn waves-effect waves-light">Cadastrar</button>
-      </a>      
+      <div class="menu-buttons">
+         <button class="btn waves-effect waves-light" (click)="logarAluno(aluno)" type="submit">Fazer Login </button>
+         <a routerLink="/cadastro">
+            <button class="btn waves-effect waves-light">Cadastrar</button>
+         </a>
+      </div>
    </form>
       
 </body>
