--- a/ta-gui/src/app/app.component.html
+++ b/ta-gui/src/app/app.component.html
@@ -3,13 +3,11 @@
 
 <nav align="center" class="top-header">
   <p>
-    Teaching Assistant
+    Siga
   </p>
   
-  <a class="header_link" routerLink="/alunos">Alunos</a>
-  <a class="header_link" routerLink="/professores">Professor</a>
-  <!-- <a class="header_link" routerLink="/metas">Metas</a> -->
-  <!-- <a class="header_link" routerLink="/cadeiras">Cadeiras</a> -->
+  <a class="header_link" routerLink="usuario">LogIn</a>
+  <a class="header_link" routerLink="/usuario" (click)="logout()">LogOut</a>
 </nav>
 
 <router-outlet></router-outlet>
