redefinindo a tela inicial

--- a/siga-gui/src/app/app.component.html
+++ b/siga-gui/src/app/app.component.html
@@ -2,11 +2,11 @@
 
 
 <nav align="center" class="top-header">
-  <p>
+  <h4>
     Siga
-  </p>
+  </h4>
   
-  <a class="header_link" routerLink="usuario">LogIn</a>
+  <a class="header_link" routerLink="/usuario">LogIn</a>
   <a class="header_link" routerLink="/usuario" (click)="logout()">LogOut</a>
 </nav>
 
