ajustes para testes de aceitação

--- a/siga-gui/src/app/cadastro/cadastro.component.html
+++ b/siga-gui/src/app/cadastro/cadastro.component.html
@@ -20,19 +20,19 @@
          <option value="a">Aluno </option>
       </select>
       <div class="input-field">
-        <input type="text" id="cadeira-name"
+        <input type="text" id="pessoa-name"
           [(ngModel)]="pessoa.name"
           [ngModelOptions]="{standalone: true}" required />
-        <label for="cadeira-name">Nome Completo </label>
+        <label for="pessoa-name">Nome Completo </label>
       </div>
       <div class="row">
-         <input type="text" id="cadeira-name"
+         <input type="text" id="pessoa-email"
           [(ngModel)]="pessoa.email"
           [ngModelOptions]="{standalone: true}" required />
          <label>Email </label>
       </div>
       <div class="row">
-         <input type="password" id="cadeira-name"
+         <input type="password" id="pessoa-senha"
           [(ngModel)]="pessoa.senha"
           [ngModelOptions]="{standalone: true}" required />
          <label>Senha </label>
