adicao de nomes nos elementos HTML a serem referenciados pelos testes

--- a/siga-gui/src/app/app.component.html
+++ b/siga-gui/src/app/app.component.html
@@ -6,8 +6,8 @@
     Siga
   </h4>
   
-  <a class="header_link" routerLink="/usuario">LogIn</a>
-  <a class="header_link" routerLink="/usuario" (click)="logout()">LogOut</a>
+  <a name="login" class="header_link" routerLink="/usuario">LogIn</a>
+  <a name="logout" class="header_link" routerLink="/usuario" (click)="logout()">LogOut</a>
 </nav>
 
 <router-outlet></router-outlet>
