Implementação dos testes de GUI para cadastro e login

--- a/siga-gui/src/app/cadastro/cadastro.component.html
+++ b/siga-gui/src/app/cadastro/cadastro.component.html
@@ -12,7 +12,7 @@
    
    <form id="cadastro-form" class="my_form">
       <label>Tipo de Usuário</label>
-      <select name="usertype" ng-model="us.escolha" [(ngModel)]="pessoa.role" class="browser-default">
+      <select name="usertype" id="userType" ng-model="us.escolha" [(ngModel)]="pessoa.role" class="browser-default">
          <option value="" disabled selected>
             Selecione o Tipo de usuário
           </option>
