Teste de adição de cadeira

--- a/siga-gui/src/app/criar-cadeira/criar-cadeira.component.html
+++ b/siga-gui/src/app/criar-cadeira/criar-cadeira.component.html
@@ -18,7 +18,7 @@
     <div class="row">
       <label>Departamento</label>
       <div class="select1 green-text">
-        <select name="departamentoselect" class="browser-default" 
+        <select name="departamentoselect" id="departamentoSelect" class="browser-default" 
           [(ngModel)]="cadeira.departamento_ofertante" 
           [ngModelOptions]="{standalone: true}">
           <option value="" disabled selected>
