--- a/siga-gui/src/app/perfil/perfil.component.html
+++ b/siga-gui/src/app/perfil/perfil.component.html
@@ -39,6 +39,13 @@
         <tr>
           <td><label>Total de vagas: {{cadeira.numero_vagas}}</label></td>
         </tr>
+        <br>
+        <tr>
+          <h5>Alunos</h5>
+        </tr>
+        <tr *ngFor="let a of alunos">
+          <td><label>{{a}}</label></td>
+        </tr>
       </table>
     </div>
   <hr>
